--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ html {
 }
 
 body {
+    background-image: linear-gradient(120deg, #1f72be, #f3f1eb);
+    min-height: 100%;
     margin-bottom: 100px;
     margin-top: 30px;
 }
@@ -10,7 +12,7 @@ body {
 
 .jumbotron img {
     width: 200px;
-    border: 5px solid #777;
+    border: 5px solid #1f71be91;
 }
 
 hr {
@@ -36,11 +38,15 @@ footer {
     bottom: 0;
     width: 100%;
     height: 100px;
-    background-color: #333;
+    background-color: rgb(0, 0, 0);
     padding-top: 30px;
 }
 
 footer p {
     color: #aaa;
     font-size: 0.9em;
+}
+
+footer a {
+    font-size: 1em;
 }
