--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ section {
 button {
     background-color: rgb(0, 0, 0) !important;
     box-shadow: 0 3px 20px rgba(0, 0, 0, 0.3);
+    border: 0px !important;
 }
 
 footer {
